Updated for better SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/model-icon.png" />
+    <meta name="language" content="English" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Car Rental</title>
+    <title>Affordable Car Rental | Daily, Weekly & Monthly Rent a Car</title>
+    <meta
+      name="keywords"
+      content="car rental, rent a car, affordable car rental, cheap car hire, daily car rental, weekly car rental, monthly car rental, long term car rental, luxury car rental, airport car hire, online car booking, car rental deals"
+    />
+    <meta
+      name="description"
+      content="Affordable car rental services with flexible daily, weekly and monthly options. Book online for the best rent a car deals – convenient, reliable and budget-friendly."
+    />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Affordable Car Rental | Daily, Weekly & Monthly Rent a Car"
+    />
+    <meta
+      property="og:description"
+      content="Book affordable and reliable car rental with flexible options – daily, weekly, and monthly plans available."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.yoursite.com/" />
+    <meta
+      property="og:image"
+      content="https://www.yoursite.com/images/car-rental-banner.jpg"
+    />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Affordable Car Rental | Daily, Weekly & Monthly Rent a Car"
+    />
+    <meta
+      name="twitter:description"
+      content="Find the best car rental deals – affordable, flexible, and convenient booking options."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.yoursite.com/images/car-rental-banner.jpg"
+    />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Ozan Demircan" />
   </head>
   <body>
     <div id="root"></div>
